src/SJP.Avro.Tools/Idl/Parsing/IdlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Idl.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
public partial class IdlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, DocComment=2, EmptyComment=3, MultiLineComment=4, SingleLineComment=5, 
		WS=6, Protocol=7, Namespace=8, Import=9, IDL=10, Schema=11, Enum=12, Fixed=13, 
		Error=14, Record=15, Array=16, Map=17, Union=18, Boolean=19, Int=20, Long=21, 
		Float=22, Double=23, String=24, Bytes=25, Null=26, BTrue=27, BFalse=28, 
		Decimal=29, Date=30, Time=31, Timestamp=32, LocalTimestamp=33, UUID=34, 
		Void=35, Oneway=36, Throws=37, LParen=38, RParen=39, LBrace=40, RBrace=41, 
		LBracket=42, RBracket=43, Colon=44, Semicolon=45, Comma=46, At=47, Equals=48, 
		Dot=49, Dash=50, QuestionMark=51, LT=52, GT=53, StringLiteral=54, IntegerLiteral=55, 
		FloatingPointLiteral=56, IdentifierToken=57;
	public const int
		RULE_idlFile = 0, RULE_protocolDeclaration = 1, RULE_protocolDeclarationBody = 2, 
		RULE_namespaceDeclaration = 3, RULE_mainSchemaDeclaration = 4, RULE_identifier = 5, 
		RULE_schemaProperty = 6, RULE_importStatement = 7, RULE_namedSchemaDeclaration = 8, 
		RULE_fixedDeclaration = 9, RULE_enumDeclaration = 10, RULE_enumSymbol = 11, 
		RULE_enumDefault = 12, RULE_recordDeclaration = 13, RULE_recordBody = 14, 
		RULE_fieldDeclaration = 15, RULE_variableDeclaration = 16, RULE_messageDeclaration = 17, 
		RULE_formalParameter = 18, RULE_resultType = 19, RULE_fullType = 20, RULE_plainType = 21, 
		RULE_nullableType = 22, RULE_primitiveType = 23, RULE_arrayType = 24, 
		RULE_mapType = 25, RULE_unionType = 26, RULE_jsonValue = 27, RULE_jsonLiteral = 28, 
		RULE_jsonObject = 29, RULE_jsonPair = 30, RULE_jsonArray = 31;
	public static readonly string[] ruleNames = {
		"idlFile", "protocolDeclaration", "protocolDeclarationBody", "namespaceDeclaration", 
		"mainSchemaDeclaration", "identifier", "schemaProperty", "importStatement", 
		"namedSchemaDeclaration", "fixedDeclaration", "enumDeclaration", "enumSymbol", 
		"enumDefault", "recordDeclaration", "recordBody", "fieldDeclaration", 
		"variableDeclaration", "messageDeclaration", "formalParameter", "resultType", 
		"fullType", "plainType", "nullableType", "primitiveType", "arrayType", 
		"mapType", "unionType", "jsonValue", "jsonLiteral", "jsonObject", "jsonPair", 
		"jsonArray"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\\u001A'", null, "'/**/'", null, null, null, "'protocol'", "'namespace'", 
		"'import'", "'idl'", "'schema'", "'enum'", "'fixed'", "'error'", "'record'", 
		"'array'", "'map'", "'union'", "'boolean'", "'int'", "'long'", "'float'", 
		"'double'", "'string'", "'bytes'", "'null'", "'true'", "'false'", "'decimal'", 
		"'date'", "'time_ms'", "'timestamp_ms'", "'local_timestamp_ms'", "'uuid'", 
		"'void'", "'oneway'", "'throws'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"':'", "';'", "','", "'@'", "'='", "'.'", "'-'", "'?'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "DocComment", "EmptyComment", "MultiLineComment", "SingleLineComment", 
		"WS", "Protocol", "Namespace", "Import", "IDL", "Schema", "Enum", "Fixed", 
		"Error", "Record", "Array", "Map", "Union", "Boolean", "Int", "Long", 
		"Float", "Double", "String", "Bytes", "Null", "BTrue", "BFalse", "Decimal", 
		"Date", "Time", "Timestamp", "LocalTimestamp", "UUID", "Void", "Oneway", 
		"Throws", "LParen", "RParen", "LBrace", "RBrace", "LBracket", "RBracket", 
		"Colon", "Semicolon", "Comma", "At", "Equals", "Dot", "Dash", "QuestionMark", 
		"LT", "GT", "StringLiteral", "IntegerLiteral", "FloatingPointLiteral", 
		"IdentifierToken"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Idl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static IdlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IdlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IdlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
	public partial class IdlFileContext : ParserRuleContext {
		public ProtocolDeclarationContext protocol;
		public NamespaceDeclarationContext @namespace;
		public MainSchemaDeclarationContext mainSchema;
		public ImportStatementContext _importStatement;
		public IList<ImportStatementContext> _imports = new List<ImportStatementContext>();
		public NamedSchemaDeclarationContext _namedSchemaDeclaration;
		public IList<NamedSchemaDeclarationContext> _namedSchemas = new List<NamedSchemaDeclarationContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(IdlParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProtocolDeclarationContext protocolDeclaration() {
			return GetRuleContext<ProtocolDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceDeclarationContext namespaceDeclaration() {
			return GetRuleContext<NamespaceDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MainSchemaDeclarationContext mainSchemaDeclaration() {
			return GetRuleContext<MainSchemaDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext[] importStatement() {
			return GetRuleContexts<ImportStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext importStatement(int i) {
			return GetRuleContext<ImportStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamedSchemaDeclarationContext[] namedSchemaDeclaration() {
			return GetRuleContexts<NamedSchemaDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamedSchemaDeclarationContext namedSchemaDeclaration(int i) {
			return GetRuleContext<NamedSchemaDeclarationContext>(i);
		}
		public IdlFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_idlFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.EnterIdlFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.ExitIdlFile(this);
		}
	}

	[RuleVersion(0)]
	public IdlFileContext idlFile() {
		IdlFileContext _localctx = new IdlFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_idlFile);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 64;
				_localctx.protocol = protocolDeclaration();
				}
				break;
			case 2:
				{
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Namespace) {
					{
					State = 65;
					_localctx.@namespace = namespaceDeclaration();
					}
				}

				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Schema) {
					{
					State = 68;
					_localctx.mainSchema = mainSchemaDeclaration();
					}
				}

				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140737488417280L) != 0)) {
					{
					State = 73;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case Import:
						{
						State = 71;
						_localctx._importStatement = importStatement();
						_localctx._imports.Add(_localctx._importStatement);
						}
						break;
					case Enum:
					case Fixed:
					case Error:
					case Record:
					case At:
						{
						State = 72;
						_localctx._namedSchemaDeclaration = namedSchemaDeclaration();
						_localctx._namedSchemas.Add(_localctx._namedSchemaDeclaration);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 77;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 80;
				Match(T__0);
				State = 84;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 81;
						MatchWildcard();
						}
						} 
					}
					State = 86;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				}
				}
			}

			State = 89;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
	public partial class ProtocolDeclarationContext : ParserRuleContext {
		public SchemaPropertyContext _schemaProperty;
		public IList<SchemaPropertyContext> _schemaProperties = new List<SchemaPropertyContext>();
		public IdentifierContext name;
		public ProtocolDeclarationBodyContext body;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Protocol() { return GetToken(IdlParser.Protocol, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProtocolDeclarationBodyContext protocolDeclarationBody() {
			return GetRuleContext<ProtocolDeclarationBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SchemaPropertyContext[] schemaProperty() {
			return GetRuleContexts<SchemaPropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SchemaPropertyContext schemaProperty(int i) {
			return GetRuleContext<SchemaPropertyContext>(i);
		}
		public ProtocolDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_protocolDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.EnterProtocolDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.ExitProtocolDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public ProtocolDeclarationContext protocolDeclaration() {
		ProtocolDeclarationContext _localctx = new ProtocolDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_protocolDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==At) {
				{
				{
				State = 91;
				_localctx._schemaProperty = schemaProperty();
				_localctx._schemaProperties.Add(_localctx._schemaProperty);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 97;
			Match(Protocol);
			State = 98;
			_localctx.name = identifier();
			State = 99;
			_localctx.body = protocolDeclarationBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
	public partial class ProtocolDeclarationBodyContext : ParserRuleContext {
		public ImportStatementContext _importStatement;
		public IList<ImportStatementContext> _imports = new List<ImportStatementContext>();
		public NamedSchemaDeclarationContext _namedSchemaDeclaration;
		public IList<NamedSchemaDeclarationContext> _namedSchemas = new List<NamedSchemaDeclarationContext>();
		public MessageDeclarationContext _messageDeclaration;
		public IList<MessageDeclarationContext> _messages = new List<MessageDeclarationContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBrace() { return GetToken(IdlParser.LBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBrace() { return GetToken(IdlParser.RBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext[] importStatement() {
			return GetRuleContexts<ImportStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ImportStatementContext importStatement(int i) {
			return GetRuleContext<ImportStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamedSchemaDeclarationContext[] namedSchemaDeclaration() {
			return GetRuleContexts<NamedSchemaDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamedSchemaDeclarationContext namedSchemaDeclaration(int i) {
			return GetRuleContext<NamedSchemaDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageDeclarationContext[] messageDeclaration() {
			return GetRuleContexts<MessageDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MessageDeclarationContext messageDeclaration(int i) {
			return GetRuleContext<MessageDeclarationContext>(i);
		}
		public ProtocolDeclarationBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_protocolDeclarationBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.EnterProtocolDeclarationBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.ExitProtocolDeclarationBody(this);
		}
	}

	[RuleVersion(0)]
	public ProtocolDeclarationBodyContext protocolDeclarationBody() {
		ProtocolDeclarationBodyContext _localctx = new ProtocolDeclarationBodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_protocolDeclarationBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(LBrace);
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 144256200442118016L) != 0)) {
				{
				State = 105;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 102;
					_localctx._importStatement = importStatement();
					_localctx._imports.Add(_localctx._importStatement);
					}
					break;
				case 2:
					{
					State = 103;
					_localctx._namedSchemaDeclaration = namedSchemaDeclaration();
					_localctx._namedSchemas.Add(_localctx._namedSchemaDeclaration);
					}
					break;
				case 3:
					{
					State = 104;
					_localctx._messageDeclaration = messageDeclaration();
					_localctx._messages.Add(_localctx._messageDeclaration);
					}
					break;
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 110;
			Match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public IdentifierContext @namespace;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Namespace() { return GetToken(IdlParser.Namespace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(IdlParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.EnterNamespaceDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.ExitNamespaceDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_namespaceDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			Match(Namespace);
			State = 113;
			_localctx.@namespace = identifier();
			State = 114;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	[System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
	public partial class MainSchemaDeclarationContext : ParserRuleContext {
		public FullTypeContext mainSchema;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Schema() { return GetToken(IdlParser.Schema, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(IdlParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FullTypeContext fullType() {
			return GetRuleContext<FullTypeContext>(0);
		}
		public MainSchemaDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainSchemaDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.EnterMainSchemaDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IIdlListener typedListener = listener as IIdlListener;
			if (typedListener != null) typedListener.ExitMainSchemaDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public MainSchemaDeclarationContext mainSchemaDeclaration() {
		MainSchemaDeclarationContext _localctx = new MainSchemaDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_mainSchemaDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(Schema);
			State = 117;
			_localctx.mainSchema = fullType();
			State = 118;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
